src/objects/Apttus_Config2__DataValidationRule__c.object
<CustomObject>
    <description>Represents a single data validation rule in a validation/enrichment ruleset</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ErrorType__c</fullName>
        <description>The type of issue that will be logged in case validation fails. Error will mean that issue needs to be resolved before next process step</description>
        <inlineHelpText>The type of issue that will be logged in case validation fails. Error will mean that issue needs to be resolved before next process step</inlineHelpText>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchOperator__c</fullName>
        <description>The operator used to match the value in the target object field against the value in the source object field</description>
        <inlineHelpText>The operator used to match the value in the target object field against the value in the source object field</inlineHelpText>
        <label>Match Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>The message that will be displayed to user in case of error or warning</description>
        <inlineHelpText>The message that will be displayed to user in case of error or warning</inlineHelpText>
        <label>Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RulesetId__c</fullName>
        <description>ID of the associated rule set</description>
        <inlineHelpText>ID of the associated rule set</inlineHelpText>
        <label>Ruleset</label>
        <referenceTo>Apttus_Config2__DataValidationEnrichmentRuleset__c</referenceTo>
        <relationshipLabel>Data Validation Rules</relationshipLabel>
        <relationshipName>DataValidationRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceObjectField__c</fullName>
        <description>API name of the source object field against which the target object field will be validated</description>
        <inlineHelpText>API name of the source object field against which the target object field will be validated</inlineHelpText>
        <label>Source Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetObjectField__c</fullName>
        <description>API name of the target object field for which value needs to be validated</description>
        <inlineHelpText>API name of the target object field for which value needs to be validated</inlineHelpText>
        <label>Target Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Validation Rule</label>
    <nameField>
        <displayFormat>VR-{00000000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Validation Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>